--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.2",
+    "bootstrap-icons": "^1.5.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
